# ecore-imf-wayland

./: .gitignore  Makefile.am  README.md  configure.ac
protocol/: Makefile.am  text.xml
src/: .gitignore  Makefile.am  wayland_imcontext.c  wayland_imcontext.h  wayland_module.c
